All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Allow_Delete_Lines__c.field-meta.xml
<CustomField>
    <fullName>Allow_Delete_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Delete Lines</label>
    <type>Checkbox</type>
</CustomField>