All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Enable_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Enable_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on this flag, chatter icon will be enabled in the iPad client for the header record</description>
    <inlineHelpText>Based on this flag, chatter icon will be enabled in the iPad client for the header record</inlineHelpText>
    <label>Enable Chatter</label>
    <type>Checkbox</type>
</CustomField>