All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Enable_Service_Report_View__c.field-meta.xml
<CustomField>
    <fullName>Enable_Service_Report_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is set to true, iPad client will allow users to view the service report attached to the record. Applies to Work Order based service flows only.</description>
    <inlineHelpText>If this flag is set to true, iPad client will allow users to view the service report attached to the record. Applies to Work Order based service flows only.</inlineHelpText>
    <label>Enable Service Report View</label>
    <type>Checkbox</type>
</CustomField>