All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Enable_Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Enable_Troubleshooting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is set to true, iPad client will allow Troubleshooting function to be opened from a record. Applies to work order-based Service Flows only.</description>
    <inlineHelpText>If this flag is set to true, iPad client will allow Troubleshooting function to be opened from a record. Applies to work order-based Service Flows only.</inlineHelpText>
    <label>Enable Troubleshooting</label>
    <type>Checkbox</type>
</CustomField>