All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Header_Reference_Field__c.field-meta.xml
<CustomField>
    <fullName>Header_Reference_Field__c</fullName>
    <description>Header Reference Field</description>
    <label>Header Reference Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>