All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Hide_Quick_Save__c.field-meta.xml
<CustomField>
    <fullName>Hide_Quick_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Quick Save</label>
    <type>Checkbox</type>
</CustomField>