All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Installation_Key__c.field-meta.xml
<CustomField>
    <fullName>Installation_Key__c</fullName>
    <description>Installation key used when seeding default page layout</description>
    <inlineHelpText>Installation key used when seeding default page layout</inlineHelpText>
    <label>Installation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>