All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/IsStandard__c.field-meta.xml
<CustomField>
    <fullName>IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if page layout is standard.</description>
    <inlineHelpText>Flag to indicate if page layout is standard.</inlineHelpText>
    <label>Is Standard?</label>
    <type>Checkbox</type>
</CustomField>