All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Multi_Add_Search_Object__c.field-meta.xml
<CustomField>
    <fullName>Multi_Add_Search_Object__c</fullName>
    <description>Multi Add Search Object</description>
    <inlineHelpText>Multi Add Search Object</inlineHelpText>
    <label>Multi Add Search Object</label>
    <length>150</length>
    <type>Text</type>
</CustomField>