All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of page layout.</description>
    <inlineHelpText>Name of page layout.</inlineHelpText>
    <label>Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>