All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/No_Of_Columns__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Columns__c</fullName>
    <description>Number of columns to be displayed in the iPad client. Applies to child sections only.</description>
    <inlineHelpText>Number of columns to be displayed in the iPad client. Applies to child sections only.</inlineHelpText>
    <label>Number Of Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>