All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Object Name</description>
    <inlineHelpText>Object Name</inlineHelpText>
    <label>Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>