All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Page_Help__c.field-meta.xml
<CustomField>
    <fullName>Page_Help__c</fullName>
    <label>Page Help</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>