All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Prompt_For_New_Event__c.field-meta.xml
<CustomField>
    <fullName>Prompt_For_New_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on this flag, the iPad client will prompt the user for creating an event after creating a new record with SFM.</description>
    <inlineHelpText>Based on this flag, the iPad client will prompt the user for creating an event after creating a new record with SFM.</inlineHelpText>
    <label>Prompt For New Event</label>
    <type>Checkbox</type>
</CustomField>