All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Show_Account_History__c.field-meta.xml
<CustomField>
    <fullName>Show_Account_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on this flag, Account History will be available as a child summary in iPad client. Applicable in View mode for Work Order object only</description>
    <inlineHelpText>Based on this flag, Account History will be available as a child summary in iPad client. Applicable in View mode for Work Order object only</inlineHelpText>
    <label>Show Account History</label>
    <type>Checkbox</type>
</CustomField>