All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Show_All_Sections_By_Default__c.field-meta.xml
<CustomField>
    <fullName>Show_All_Sections_By_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if all sections of page will be displayed at once in iPad client. If unchecked, the first section is displayed.</description>
    <inlineHelpText>Indicates if all sections of page will be displayed at once in iPad client. If unchecked, the first section is displayed.</inlineHelpText>
    <label>Show All Sections By Default</label>
    <type>Checkbox</type>
</CustomField>