All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/SM_Include_Field1__c.field-meta.xml
<CustomField>
    <fullName>SM_Include_Field1__c</fullName>
    <description>Salesforce API name of the Work Order field</description>
    <label>Include Field1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>