All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/SM_Include_Field2__c.field-meta.xml
<CustomField>
    <fullName>SM_Include_Field2__c</fullName>
    <label>Include Field2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>