All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/SM_Include_Summary__c.field-meta.xml
<CustomField>
    <fullName>SM_Include_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether to include summary information or not</description>
    <label>Include Summary</label>
    <type>Checkbox</type>
</CustomField>