All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/SM_Include_Time_and_Place__c.field-meta.xml
<CustomField>
    <fullName>SM_Include_Time_and_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether to include Time and Place information or not</description>
    <label>Include Time and Place</label>
    <type>Checkbox</type>
</CustomField>