All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/SM_Summary_Title__c.field-meta.xml
<CustomField>
    <fullName>SM_Summary_Title__c</fullName>
    <description>Salesforce API name of the Work Order field which will be displayed as Summary Title</description>
    <label>Summary Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>