All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/SM_Title_Bar__c.field-meta.xml
<CustomField>
    <fullName>SM_Title_Bar__c</fullName>
    <description>Salesforce API name of the Work Order field which will be displayed as Title</description>
    <label>Title Bar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>