All_Component_DX/force-app/main/default/objects/Page_Layout__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type</description>
    <inlineHelpText>Type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>